--- a/index.html
+++ b/index.html
@@ -88,36 +88,39 @@
         return null;
       }
       function Game(){
-        const[xIsNext,setXIsNext]=React.useState(true);
         const[history,setHistory]=React.useState([Array(9).fill(null)]);
-        const currentSquares = history[history.length - 1]
+        const[currentMove, setCurrentMove]=React.useState(0);
+        const currentSquares = history[currentMove];
+        const xIsNext=currentMove%2===0;
         function handlePlay(nextSquares){
-         setHistory([...history,nextSquares]);
-         setXIsNext(!xIsNext);
+         const nextHistory=[...history.slice(0,currentMove+1),nextSquares];
+         setHistory(nextHistory);
+         setCurrentMove(nextHistory.length-1);
         }
         function jumpTo(nextMove){
-          const moves =history.map((squares,move)=>{
+          setCurrentMove(nextMove);
+        }
+        const moves =history.map((squares,move)=>{
+          let description;
           if(move>0){
             description='Go to move #'+move;
           }
           else{
             description='Go to game start';
           }
-        });
         return (
-          <li>
+          <li key={move}>
             <button onClick={()=>jumpTo(move)}>{description}</button>
             </li>
         );
-        }
-        
+          });
         return (
           <div className='game'>
             <div className='game-board'>
               <Board xIsNext={xIsNext} squares={currentSquares} onPlay={handlePlay}/>
               </div>
               <div className='game-info'>
-                
+                <ol>{moves}</ol>
                 </div>
             </div>
         )
